--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <body>
     <div id="warning-message" class="center-screen" style="display: none;">
         <div class="emoji">📱</div>
-        <div class="message">กรุณาเข้าผ่านมือถือ หรือแท็บเหล็ด</div>
+        <div class="message">กรุณาลงเวลาผ่านมือถือหรือแท็บเล็ตเท่านั้น!</div>
     </div>
 
     <script>
